tests/ui/traits/inductive-overflow/lifetime.stderr
error[E0275]: overflow evaluating the requirement `X<C<'_>>: NotAuto`
  --> $DIR/lifetime.rs:29:5
   |
LL |     is_send::<X<C<'static>>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required for `Box<X<C<'_>>>` to implement `NotAuto`
  --> $DIR/lifetime.rs:18:18
   |
LL | impl<T: NotAuto> NotAuto for Box<T> {}
   |         -------  ^^^^^^^     ^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
   = note: 3 redundant requirements hidden
   = note: required for `X<C<'static>>` to implement `NotAuto`
note: required by a bound in `is_send`
  --> $DIR/lifetime.rs:23:15
   |
LL | fn is_send<S: NotAuto>() {}
   |               ^^^^^^^ required by this bound in `is_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
